--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@ Email  : sahana.cse112@gmail.com
 -->
 <html>
     <head>
-        <title>Tree Graph Dynamic</title>
+        <title>Tree Graph Dynamic pull request</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
